  - X-Forwarded-HTTPS header is DEPRECATED! use X-Forwarded-Proto header instead.
  - remove [basic]show_ignore_space_change_link option.
    and move this feature to project settings page.
  - remove [basic]encoding_suspects option
    and move this feature to project settings page.
  - setup.sh is renamed to setup_module
  - separete database creating logic to setup_database script
  
1.12 (7 Feb 2016)
  - Catch up latest Github design.
  - Fix bug that relative image path in README.md and blob html.
1.11 (7 Nov 2015)
  - support relative path in README.md and blob html.
  - support git version 2
1.10 (27 Jun 2015)
  - add show_ignore_space_change_link option to show --ignore-space-change page easily
  - add --ignore-space-change feature in diff page by using w= query string
    for example, http://some.com/kimoto/gitprep_t/commit/3cf14ade5e28ee0cd83b9a3b1e1c332aed66df53?w=
  - remove password length limit
  - improve CGI installation and change CGI script path. This is not backword compatible.
    you need to change CGI script path, path/gitprep.cgi to path/gitprep/gitprep/cgi
  - remove setup.php
  
1.9.2 (18 Nov 2014)
  - fix atom feed entry url bug
1.9.1
  - fix atom feed bug
1.9 (11 Nov 2014)
  - add ssh_rep_url_base to cnahge or hide ssh URL user directory
  - add atom feed of commits page
    for example, http://somehost.com/kimoto/gitprep_t/commits/master.atom
1.8 (6 Jun 2014)
  - support publick key authentication
1.7 (26 Apr 2014)
  - allow . as project name.
  - add respository and user search page
1.6 (3 Apr 2014)
  - fix bug that can't create collaborator more than one.
  - support time zone.
  - change markdown parser from Text::Markdown::Discount to Text::Markdown::Hoedown
    because we want to support fenced code syntax
    ```
    code
    ```
  - add encoding_suspects to support multiple encoding in blob, commit diff, and blame.
1.5 (26 Feb 2014)
  - fix bug that git clone via http failed.
  - show readme file in sub directory.