@@ -1,8 +1,0 @@
-Copyright 2012-2013 Yuki Kimoto. All rights reserved.
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms of either:
-
-  a) the GNU General Public License as published by the Free Software Foundation; either version 1, or (at your option) any later version, or
-
-  b) the "Artistic License". 
