@@ -40,7 +40,7 @@ note 'import_rep';
   $t->content_like(qr/Admin/);
 
   # Create user
-  $t->post_ok('/_admin/user/create?op=create', form => {id => 'kimoto', password => 'a', password2 => 'a'});
+  $t->post_ok('/_admin/user/create?op=create', form => {id => 'kimoto', mail => 'kimoto@foo.com', password => 'a', password2 => 'a'});
   $t->content_like(qr/Success.*created/);
   
   # Import repositories
