@@ -9,6 +9,7 @@
     and move this feature to project settings page.
   - setup.sh is renamed to setup_module
   - separete database creating logic to setup_database script
+  - add name and mail column to user table. mail is required for user registration.
   
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
